[gd_scene load_steps=8 format=3 uid="uid://do5rw3dy4eajb"]

[ext_resource type="Script" uid="uid://bmwdf58ehu6uw" path="res://scenes/Enemies/TestObject/test_object.gd" id="1_r45y4"]
[ext_resource type="PackedScene" uid="uid://iex0slioqmu3" path="res://scenes/Components/HealthComponent/health_component.tscn" id="2_sgx55"]
[ext_resource type="Texture2D" uid="uid://dahjg14x4dhte" path="res://assets/08-Box/Idle.png" id="2_tdhc8"]
[ext_resource type="PackedScene" uid="uid://bnbatr7lw83tv" path="res://scenes/Components/HurtboxComponent/hurtbox_component.tscn" id="3_tdhc8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sgx55"]
friction = 0.25
bounce = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdhc8"]
size = Vector2(19, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgx55"]
size = Vector2(19, 14)

[node name="TestObject" type="RigidBody2D"]
collision_layer = 256
collision_mask = 4369
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_sgx55")
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_r45y4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tdhc8")
offset = Vector2(0, -8)
region_rect = Rect2(0, 0, 21, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_tdhc8")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hurtbox") instance=ExtResource("2_sgx55")]
hurtbox = NodePath("../HurtboxComponent")
MAX_HEALTH = 5

[node name="HurtboxComponent" parent="." instance=ExtResource("3_tdhc8")]
invulnerable_time_sec = 2.0
collision_layers = 1024
collision_masks = 546

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_sgx55")
debug_color = Color(0.980392, 0, 0.196078, 0.392157)

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="hit" from="HurtboxComponent" to="." method="_on_hurtbox_component_hit"]
